@startuml
'skinparam linetype ortho

package "Data Model" as datamodel <<frame>> {
    enum IdmpDoseForm {}
    enum Country {}

    entity IdmpSubstance {
        name: String
    }

    entity IdmpMedicinalProduct {
        name: String
        doseForm: IdmpDoseForm
        packageSize: Integer
    }

    entity Organization {
        name: String
    }

    package "Local Data" as local <<frame>> {
        entity LocalMedicinalProductData {
            country: Country
            data: Json
        }

        entity LocalSubstanceData {
            country: Country
            data: Json
        }

        LocalMedicinalProductData --> Country
        LocalMedicinalProductData "*" --* "1" IdmpMedicinalProduct

        LocalSubstanceData --> Country
        LocalSubstanceData "*" --* "1" IdmpSubstance
    }

    IdmpMedicinalProduct --> IdmpDoseForm
    IdmpMedicinalProduct "*" --o "1" Organization : manufacturer
    IdmpMedicinalProduct "*" --o "1..*" IdmpSubstance : ingredients
}

@enduml